task27/deploymentapache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-app
  labels:
    app: apache-app
spec:
  selector:
    matchLabels:
      app: apache-app
  template:
    metadata:
      labels:
        app: apache-app
    spec:
      containers:
      - name: apache-server
        image: httpd:2.4.63
        ports:
        - containerPort: 80
