task27/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "8082"
      port: 8082
      targetPort: 8082
    - name: "443"
      port: 443
      targetPort: 443 
  selector:
    app: nginx-app
