task27/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - trainee4.com
    secretName: nginx-secret
  rules:
    - host: trainee4.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-service
                port:
                  number: 443
          - path: /image1
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 443
          - path: /image2
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 443
          - path: /secondserver
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 443
          - path: /music
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 443
          - path: /redblue
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 443
          - path: /loadbalancer
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8082
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 443
    - host: www.trainee4.com
      http:
        paths:      
          - path: /loadbalancer
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8081
